--- a/web/index.html
+++ b/web/index.html
@@ -75,20 +75,6 @@ body{
   margin-left:8px; padding:4px 10px; border:1px solid var(--border-weak);
   border-radius:999px; color:var(--muted); display:flex; align-items:center; gap:8px;
 }
-.status-chip{
-  padding:2px 10px;
-  border-radius:999px;
-  font-size:11px;
-  letter-spacing:.3px;
-  border:1px solid transparent;
-  display:inline-flex;
-  align-items:center;
-  gap:6px;
-  text-transform:uppercase;
-}
-.status-chip.ok{background:rgba(0,255,209,.12);color:var(--ok);border-color:rgba(0,255,209,.35);}
-.status-chip.error{background:rgba(255,77,109,.12);color:var(--danger);border-color:rgba(255,77,109,.35);}
-.status-chip.neutral{background:rgba(255,255,255,.06);color:var(--muted);border-color:var(--border-weak);}
 .grid{
   display:grid; grid-template-columns: 320px 1fr; gap:16px; padding:16px; height:calc(100% - 58px);
 }
@@ -144,11 +130,37 @@ button,.btn{
   background:var(--button-bg); color:var(--ink); border:1px solid var(--border-weak);
   padding:8px 10px; border-radius:8px; cursor:pointer; font-family:var(--mono);
 }
-button:hover{border-color:var(--border-strong)}
+button:not(.cta-button):hover{border-color:var(--border-strong)}
 button.primary{
   border-color: var(--accent); box-shadow: var(--glow);
 }
 button.ghost{background:transparent}
+
+.cta-button{
+  position:relative;
+  display:inline-flex;
+  flex-direction:column;
+  align-items:flex-start;
+  gap:2px;
+  padding:12px 16px;
+  border-radius:14px;
+  background:linear-gradient(135deg, rgba(0,255,209,.18), rgba(255,0,168,.16));
+  border:1px solid rgba(255,255,255,.18);
+  color:var(--ink);
+  box-shadow:0 14px 28px rgba(0,0,0,.22);
+  transition:transform .15s ease, box-shadow .15s ease, border-color .15s ease;
+}
+.cta-button:hover{
+  transform:translateY(-1px);
+  border-color:rgba(0,255,209,.4);
+  box-shadow:0 18px 32px rgba(0,0,0,.28);
+}
+.cta-button:focus-visible{
+  outline:2px solid var(--accent);
+  outline-offset:2px;
+}
+.cta-label{font-size:13px; font-weight:700; letter-spacing:.3px;}
+.cta-sub{font-size:11px; color:var(--muted);}
 #theme-toggle{
   margin-left:auto;
   width:40px;
@@ -203,13 +215,21 @@ label{font-size:12px; color:var(--muted)}
 .small{font-size:12px}
 .code{background:#081018; border:1px solid rgba(255,255,255,.12); border-radius:8px; padding:8px; font-size:12px}
 .status{
-  display:flex; align-items:center; gap:8px; color:var(--muted); font-size:12px
+  display:flex;
+  align-items:flex-start;
+  gap:10px;
+  color:var(--muted);
+  font-size:12px;
 }
-.root-readout{margin-top:6px; display:flex; align-items:center; gap:6px; font-size:12px; color:var(--muted); font-family:var(--mono);}
+.root-readout{margin:0; display:flex; align-items:center; gap:6px; font-size:12px; color:var(--muted); font-family:var(--mono);}
 .dot{width:8px;height:8px;border-radius:50%;background:#8b93a0;border:1px solid #444}
 .dot.ok{background:var(--ok); box-shadow:0 0 10px rgba(61,252,154,.6)}
 .dot.bad{background:var(--danger); box-shadow:0 0 10px rgba(255,77,109,.6)}
-.chip-group{display:flex; gap:8px; align-items:center; flex-wrap:wrap;}
+.status-info{display:flex; flex-direction:column; gap:4px;}
+.status-message{color:var(--muted); font-family:var(--mono); font-size:11px; letter-spacing:.3px;}
+.status-message.ok{color:var(--ok);}
+.status-message.error{color:var(--danger);}
+.status-message:empty{display:none;}
 .footer{
   display:flex; justify-content:space-between; align-items:center; gap:8px; color:var(--muted); font-size:12px
 }
@@ -578,15 +598,18 @@ body.modal-open{overflow:hidden;}
           <div class="title">Trust the minutes. Not the note-taker.</div>
           <div class="subtitle">All verification is local. No servers. No secrets leaked.</div>
           <div class="actions">
-            <button class="primary" id="btn-try-it">Try it now</button>
+            <button class="cta-button" id="btn-try-it" type="button">
+              <span class="cta-label">Walk through an example</span>
+              <span class="cta-sub">Load curated minutes &rarr;</span>
+            </button>
           </div>
         </div>
         <div class="status">
-          <div class="chip-group">
-            <span class="dot" id="integrity-dot" aria-label="Integrity status: idle"></span>
-            <span class="status-chip neutral" id="root-status-chip">Awaiting root</span>
+          <span class="dot" id="integrity-dot" aria-label="Integrity status: idle"></span>
+          <div class="status-info">
+            <div class="root-readout"><span>Root:</span> <code id="root" class="mono">—</code></div>
+            <div class="status-message" id="integrity-label" aria-live="polite"></div>
           </div>
-          <div class="root-readout"><span>Root:</span> <code id="root" class="mono">—</code></div>
         </div>
       </div>
 
@@ -692,7 +715,7 @@ body.modal-open{overflow:hidden;}
   const out = document.getElementById('output');
   const jsonBox = document.getElementById('json');
   const dot = document.getElementById('integrity-dot');
-  const rootStatusChip = document.getElementById('root-status-chip');
+  const integrityLabel = document.getElementById('integrity-label');
   const itemsOverview = document.getElementById('items-overview');
   const btnTryIt = document.getElementById('btn-try-it');
   const btnSaltGenerate = document.getElementById('btn-salt-generate');
@@ -1061,29 +1084,28 @@ body.modal-open{overflow:hidden;}
   });
 
   function setIntegrity(state, message) {
-    const stateLabel = {
-      neutral: message || 'Awaiting root',
-      ok: message || 'Verified',
-      bad: message || 'Mismatch vs expected root',
-    };
-
     dot.classList.remove('ok', 'bad');
-    rootStatusChip?.classList.remove('ok', 'error', 'neutral');
+    integrityLabel?.classList.remove('ok', 'error');
 
     if (state === 'ok') {
       dot.classList.add('ok');
-      rootStatusChip?.classList.add('ok');
-      rootStatusChip.textContent = stateLabel.ok;
-      dot.setAttribute('aria-label', `Integrity status: ${stateLabel.ok.toLowerCase()}`);
+      if (integrityLabel) {
+        integrityLabel.textContent = message || 'Root ready';
+        integrityLabel.classList.add('ok');
+      }
+      dot.setAttribute('aria-label', 'Integrity status: root verified');
     } else if (state === 'bad') {
       dot.classList.add('bad');
-      rootStatusChip?.classList.add('error');
-      rootStatusChip.textContent = stateLabel.bad;
-      dot.setAttribute('aria-label', `Integrity status: ${stateLabel.bad.toLowerCase()}`);
+      if (integrityLabel) {
+        integrityLabel.textContent = message || 'Root mismatch';
+        integrityLabel.classList.add('error');
+      }
+      dot.setAttribute('aria-label', 'Integrity status: root mismatch');
     } else {
-      rootStatusChip?.classList.add('neutral');
-      rootStatusChip.textContent = stateLabel.neutral;
-      dot.setAttribute('aria-label', 'Integrity status: awaiting root');
+      if (integrityLabel) {
+        integrityLabel.textContent = message || '';
+      }
+      dot.setAttribute('aria-label', 'Integrity status: idle');
     }
   }
 
